MB186-Fix extension box on firefox for phone field editor

--- a/ui/client-react/src/components/fields/phoneField.scss
+++ b/ui/client-react/src/components/fields/phoneField.scss
@@ -4,20 +4,16 @@
     display: flex;
     width: 100%;
     .ext {
-        padding: 2px;
+        width: 4%;
+        text-align: center;
         align-self: center;
     }
-    @include small-breakpoint {
-        .ext {
-            padding-right: 2px;
-            padding-left: 5px;
-        }
-    }
+
     .input.phoneNumber {
-        width: 70%;
+        width: 66%;
     }
     .input.extension {
-        width: 30%;
+        width: 28%;
     }
 
     .extraDigits, .extension {
